syntax = "proto3";

package product;

option go_package = "/pb";

import "google/protobuf/empty.proto";

// -------------------------------------
// Request DTOs
// -------------------------------------

message CreateCategoryRequest {
  string name = 1;
}

message UpdateCategoryRequest {
  uint32 id = 1;
  string name = 2;
}

message DeleteCategoryRequest {
  uint32 id = 1;
}

// -------------------------------------
// Response DTOs
// -------------------------------------

message CategoryResponse {
  uint32 id = 1;
  string name = 2;
}

message CategoryListResponse {
  repeated CategoryResponse categories = 1;
}

// -------------------------------------
// Service Definition
// -------------------------------------

service CategoryService {
  rpc GetAllCategories(google.protobuf.Empty) returns (CategoryListResponse);
  rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse);
  rpc UpdateCategory(UpdateCategoryRequest) returns (CategoryResponse);
  rpc DeleteCategory(DeleteCategoryRequest) returns (google.protobuf.Empty);
}
