syntax = "proto3";

package product;

option go_package = "/pb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// -------------------------------------
// Message Definitions (DTO Equivalent)
// -------------------------------------

message UserReview {
  uint64 id = 1;
  string full_name = 2;
  string avatar_url = 3;
}

// -------------------------------------
// Request DTOs
// -------------------------------------

message CreateReviewRequest {
  uint64 product_id = 1;
  uint64 user_id = 2;
  int32 rating = 3;
  string comment = 4;
}

message UpdateReviewRequest {
  uint64 review_id = 1;
  uint64 product_id = 2;
  uint64 user_id = 3;
  int32 rating = 4;
  string comment = 5;
}

message GetReviewByProductRequest {
  uint64 product_id = 1;
}

message DeleteReviewRequest {
  uint64 review_id = 1;
  uint64 user_id = 2;
}

// -------------------------------------
// Response DTOs
// -------------------------------------

message ReviewResponse {
  uint64 id = 1;
  int32 rating = 2;
  string comment = 3;
  google.protobuf.Timestamp date = 4;
  UserReview user = 5;
}

message ReviewListResponse {
  repeated ReviewResponse reviews = 1;
}

// -------------------------------------
// Service Definition
// -------------------------------------

service ReviewService {
  rpc GetAllReviews(google.protobuf.Empty) returns (ReviewListResponse);
  rpc GetReviewByProductID(GetReviewByProductRequest) returns (ReviewListResponse);
  rpc CreateReview(CreateReviewRequest) returns (ReviewResponse);
  rpc UpdateReview(UpdateReviewRequest) returns (ReviewResponse);
  rpc DeleteReview(DeleteReviewRequest) returns (google.protobuf.Empty);
}
